--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Chat with JSON!</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="vendor/jquery/jquery-1.9.1.js"></script>
-    <script src="js/setup.js"></script>
   </head>
   <body>
-
-    <div id="main">
-      <h1>Chat with JSON!</h1>
-    </div>
-
+    <h1>Chat with JSON!</h1>
+    <div id="main"></div>
+    <script src="vendor/jquery/jquery-1.9.1.js"></script>
+    <script src="js/setup.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
