working on grabbing by date

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Chat with JSON!</h1>
     <div id="main"></div>
     <script src="vendor/jquery/jquery-1.9.1.js"></script>
+    <script src="vendor/moment.min.js"></script>
     <script src="js/setup.js"></script>
     <script src="js/script.js"></script>
   </body>
