--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Chat with JSON!</h1>
+    <h2 id="username"></h2>
+    <form id="form-message">
+      <input id="input-message" type="text" placeholder="Your Message">
+    </form>
     <div id="main"></div>
     <script src="vendor/jquery/jquery-1.9.1.js"></script>
     <script src="vendor/moment.min.js"></script>
